tests/baselines/reference/functionOverloadCompatibilityWithVoid01.errors.txt
tests/cases/conformance/functions/functionOverloadCompatibilityWithVoid01.ts(1,10): error TS2394: Overload signature is not compatible with function implementation.


==== tests/cases/conformance/functions/functionOverloadCompatibilityWithVoid01.ts (1 errors) ====
    function f(x: string): number;
             ~
!!! error TS2394: Overload signature is not compatible with function implementation.
    function f(x: string): void {
        return;
    } 